home image and form fix

--- a/_includes/valuation-form.html
+++ b/_includes/valuation-form.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-12 col-sm-8">
       <form id="mainLeadForm" class="animated fadeInUp">
         <div class="row">
           <div class="col-12">
@@ -79,7 +79,7 @@
                 </div>
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="serviceConsent" value="unchecked" data-validation="required">
-                    <label class="custom-control-label" for="serviceConsent"><p class="small">I agree and allow my property insight to process my data to provide my with my property report.</p></label>
+                    <label class="custom-control-label" for="serviceConsent"><p class="small">I agree and allow my property insight to process my data to provide my with me property report.</p></label>
                 </div>
               </div>
               <button type="submit" id="mainLeadFormSubmit" class="btn btn-primary" disabled>Submit</button>
