--- a/css/styles.scss
+++ b/css/styles.scss
@@ -58,12 +58,19 @@ h1.logo span {
 .navbar-nav .nav-link:hover, .navbar-nav .nav-link:focus {
   color: $brand-green;
 }
-
+@media (max-width: 575.98px) {
+  header.hero {
+  background: url("https://images.pexels.com/photos/1054974/pexels-photo-1054974.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+}
+}
+@media (min-width: 576px) {
+  header.hero {
+    background: url("../img/iphoneX.png") no-repeat center center;
+  }
+}
 header.hero {
   position: relative;
   background-color: #343a40;
-  background: url("../img/iphoneX.png") no-repeat center center;
-
   padding-top: 8rem;
   padding-bottom: 8rem;
   background-attachment: fixed;
