--- a/_includes/pageHeader.html
+++ b/_includes/pageHeader.html
@@ -1,4 +1,4 @@
-<header class="hero text-white text-center" id="newsHeader" style="background-image: url('{{site.url}}{{page.heroImg}}');">
+<header class="hero text-white text-center" id="newsHeader" style="background-image: url('{{site.url}}/{{page.heroImg}}');">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
