--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,9 +13,10 @@ p {
   font-size: 18px;
   font-weight: 300;
 }
-
-
-
+.errScot {
+  color: $brand-green;
+  font-weight: 300;
+}
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -404,7 +405,7 @@ main {
   background-color: #E0E0E0;
   height: 100vh;
 }
-#mainLeadForm {
+#mainLeadForm,#contactForm {
   background-color: #EAEAEA;
   padding: 20px;
   border-radius: 4px;
