--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,12 +25,12 @@
       <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
         <ul class="list-inline mb-0">
           <li class="list-inline-item mr-3">
-            <a href="#">
+            <a href="https://www.facebook.com/mypropertyinsights/" target="_blank">
               <i class="fab fa-facebook fa-2x fa-fw"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="mailto:contact@mypropertyinsights.co.uk?subject=Contact">
+            <a href="{{site.url}}/contact">
               <i class="fas fa-2x fa-envelope"></i>
             </a>
           </li>
