--- a/_includes/homepageHeader.html
+++ b/_includes/homepageHeader.html
@@ -7,11 +7,11 @@
       </div>
       <div class="col-md-6 col-lg-6 col-xl-6 mx-auto text-center">
         <div class=" animated wow slideInRight" data-wow-delay="0.3s">
-          <div class="">
+          <div class="formHomeBlock">
             <h3>Enter your post code to start your free valuation...</h3>
             <div class="mb-3">
               <div class="form-inline pcForm">
-                <div class="form-group mx-sm-3 mb-2">
+                <div class="form-group mx-sm-3 mb-2" id="homePCForm">
               <input type="text" class="form-control" id="postCodeInput" aria-label="Enter Post Code"
                 aria-describedby="postCodeInput" placeholder="Post Code">
                 <button class="btn btn-md btn-primary ml-1 px-3" type="button" id="find-button">Search</button>
