--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="{{ site.description }}">
+<link rel="canonical" href="https://www.mypropertyinsights.co.uk/">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet">
@@ -14,3 +15,4 @@
 <link rel="shortcut icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="{{ site.url }}/img/favicon.ico" type="image/x-icon">
 {% include meta.html %}
+{% seo %}
