--- a/_includes/dashboard-sidebar.html
+++ b/_includes/dashboard-sidebar.html
@@ -18,6 +18,9 @@
         <a class="nav-link btn btn-block" href="#" data-name="estate-agent" id="findEAgent"><i class="fas fa-search"></i> Find an Estate Agent<i class="fa fa-angle-right"></i></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link btn btn-block" href="#" data-name="mortgages" id="findMortgage"><i class="fas fa-home"></i> Mortgages<i class="fa fa-angle-right"></i></a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link btn btn-block" href="#" data-name="calculators"><i class="fas fa-calculator"></i>  Calculators<i class="fa fa-angle-right"></i></a>
       </li>
       <li class="nav-item">
