--- a/css/styles.scss
+++ b/css/styles.scss
@@ -71,7 +71,7 @@ h1.logo span {
 }
 header.hero {
   position: relative;
-  background-color: #343a40;
+  background-color: #EAEAEA;
   padding-top: 8rem;
   padding-bottom: 8rem;
   background-attachment: fixed;
